Adding some message payload types